--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,53 @@
 .App{
   text-align: center;
+  width: 60%;
+  margin: auto;
+}
+
+.logo{
+  cursor: pointer;
+}
+
+.logo a{
+  text-decoration: none;
+  color: rgba(232, 230, 227, 0.7);
+  line-height: 2;
+}
+
+.logo a:hover{
+  color: white;
 }
 
 .black-nav{
   display: flex;
-  background-color: black;
   width: 100%;
-  color: white;
-  padding-left: 20px;
+  height: 4em;
+  margin:auto;
+  color:  rgba(232, 230, 227, 0.7);
+  padding-left: 2%;
 }
 
 
 .links{
-  margin: auto;
+  margin-top: auto;
+  margin-bottom:auto;
+  display: flex;
+  justify-content: right;
+  width: 80%;
+  margin-left: 1%;
 }
+
+.navLinks{
+  color:  rgba(232, 230, 227, 0.7);
+  text-decoration: none;
+  margin-left: 2%;
+  font-family:Noto Sans KR, sans-serif;;
+  font-size: 1rem;
+  font-weight: 700;
+}
+
+.navLinks:hover{
+  color: white;
+  font-weight: 10%;
+}
+
